gitops-repo/platform/kyverno/policies/disallow-latest.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: disallow-latest-tag

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: disallow-latest
      match:
        any:
          - resources:
              kinds: [Pod]
      validate:
        message: "Using image tag 'latest' is not allowed. Use a specific version tag."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
            initContainers:
              - image: "!*:latest"
