gitops-repo/platform/kyverno/policies/require-resource-limits.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-resource-limits

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: check-resource-limits
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [rag, production, staging]

      validate:
        message: "CPU and memory limits are required for all containers."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
